--- a/requirements.txt
+++ b/requirements.txt
@@ -59,7 +59,7 @@ pandas==2.2.2
 pillow==10.4.0
 protobuf==5.27.3
 pyarrow==17.0.0
-PyAudio==0.2.14
+PyAudio==0.2.11
 pycparser==2.22
 pydeck==0.9.1
 pydub==0.25.1
@@ -98,6 +98,6 @@ urllib3==2.2.2
 watchdog==4.0.2
 websockets==13.0
 Werkzeug==3.0.4
-whisper==1.1.10
+whisper
 wsproto==1.2.0
 xyzservices==2024.6.0
